# C_Project_3EII

./: .gitlab-ci.yml  CMakeLists.txt  CR_2e_reu_05fev.odt  README.md  Structures.h  Versionning_Idea.odt  calendrier.c  calendrier.h  callbacks.c  callbacks.h  date.c  date.h  dossier_medical.h  fonctionsGraphiques.c  fonctionsGraphiques.h  main.c  medecin.c  medecin.h  ordonnance.c  ordonnance.h  patient.c  patient.h  project.json  rendezvous.c  rendezvous.h  tests_unitaires.c  tests_unitaires.h  time.c  time.h
Doxygen/: Doxyfile
Doxygen/html/: _g_p_calendar_shell_8c.html  _g_p_calendar_shell_8c.js  _g_p_calendar_shell_8c__incl.map  _g_p_calendar_shell_8c__incl.md5  _g_p_calendar_shell_8h.html  _g_p_calendar_shell_8h.js  _g_p_calendar_shell_8h__dep__incl.map  _g_p_calendar_shell_8h__dep__incl.md5  _g_p_calendar_shell_8h__incl.map  _g_p_calendar_shell_8h__incl.md5  _g_p_calendar_shell_8h_source.html  _json_save_8c.html  _json_save_8c.js  _json_save_8c__incl.map  _json_save_8c__incl.md5  _json_save_8h.html  _json_save_8h.js  _json_save_8h__dep__incl.map  _json_save_8h__dep__incl.md5  _json_save_8h__incl.map  _json_save_8h__incl.md5  _json_save_8h_source.html  _structures_8h.html  _structures_8h.js  _structures_8h__dep__incl.map  _structures_8h__dep__incl.md5  _structures_8h_source.html  annotated.html  annotated.js  calendrier_8c.html  calendrier_8c.js  calendrier_8c__incl.map  calendrier_8c__incl.md5  calendrier_8h.html  calendrier_8h.js  calendrier_8h__dep__incl.map  calendrier_8h__dep__incl.md5  calendrier_8h__incl.map  calendrier_8h__incl.md5  calendrier_8h_source.html  (+329 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_9.js  (+37 more)
Doxygen/latex/: _g_p_calendar_shell_8c.tex  _g_p_calendar_shell_8c__incl.md5  _g_p_calendar_shell_8h.tex  _g_p_calendar_shell_8h__dep__incl.md5  _g_p_calendar_shell_8h__incl.md5  _json_save_8c.tex  _json_save_8c__incl.md5  _json_save_8h.tex  _json_save_8h__dep__incl.md5  _json_save_8h__incl.md5  _structures_8h.tex  _structures_8h__dep__incl.md5  annotated.tex  calendrier_8c.tex  calendrier_8c__incl.md5  calendrier_8h.tex  calendrier_8h__dep__incl.md5  calendrier_8h__incl.md5  callbacks_8c.tex  callbacks_8c__incl.md5  callbacks_8h.tex  callbacks_8h__dep__incl.md5  callbacks_8h__incl.md5  date_8c.tex  date_8c__incl.md5  date_8h.tex  date_8h__dep__incl.md5  date_8h__incl.md5  dir_32e188284d239da8bb14ec1dabb0c35f.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_65295badb1715408ff33c95f7fd989c2.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7784d12364ef0ec21cd188ca9cb3a89c.tex  dir_7784d12364ef0ec21cd188ca9cb3a89c_dep.md5  dir_94bc79e5fbb2c8a2ae643483ab30329d.tex  dir_94bc79e5fbb2c8a2ae643483ab30329d_dep.md5  dir_951f43124f8a9985ab7802551d674f01.tex  dir_bcfceead3b84f67cd3d92ab17b267287.tex  dir_bcfceead3b84f67cd3d92ab17b267287_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  (+93 more)
cmake/: CodeCoverage.cmake  FetchCJson.cmake  FetchCMocka.cmake
docs/: project.json
docs/GPCalendarProjectsExample/: example1_project.json
include/GPCalendar/App/: GPCalendarShell.h
include/GPCalendar/Model/: JsonSave.h  Structures.h  calendrier.h  date.h  dossier_medical.h  medecin.h  ordonnance.h  patient.h  project_GPCalendar.h  rendezvous.h
include/GPCalendar/View/: callbacks.h  fonctionsGraphiques.h  time.h  time_GPCalendar.h
src/: JsonSave.c  JsonSave.h  Structures.h  calendrier.c  calendrier.h  date.c  date.h  dossier_medical.c  dossier_medical.h  main.c  medecin.c  medecin.h  ordonnance.c  ordonnance.h  patient.c  patient.h  rendezvous.c  rendezvous.h  tests_unitaires.c
src/App/: GPCalendarShell.c  main.c
src/Model/: JsonSave.c  calendrier.c  date.c  dossier_medical.c  medecin.c  ordonnance.c  patient.c  project_GPCalendar.c  rendezvous.c
src/View/: callbacks.c  fonctionsGraphiques.c  time.c  time_GPCalendar.c
tests/: tests_unitaires.c
